# mee-deepreefmap

./: .gitattributes  .gitignore  README.md  pixi.toml  pyproject.toml
.github/workflows/: pixi.yml
scripts/: download_example_data.py
src/segmentation/: model.py
src/sfm/: model.py  utils.py
